# stara_astar_stdlib

./: .gitignore  40x40_seed42_paths3_BFS_maze.json  pyproject.toml
stara_astar_stdlib/: a_star_stdlib.py
