[tool.poetry]
name = "stara-astar-stdlib"
version = "0.1.0"
description = ""
authors = ["Valerius Mattfeld <mail@valerius.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stara-maze-generator = { git = "https://github.com/valerius21/Stara-Maze-Generator.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
